# python-glareclient

./: .coveragerc  .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  lower-constraints.txt  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
doc/source/man/: glare.rst
glareclient/: __init__.py  _i18n.py  client.py  exc.py  shell.py
glareclient/common/: base.py  exceptions.py  http.py  https.py  keycloak_auth.py  progressbar.py  utils.py
glareclient/osc/: plugin.py
glareclient/osc/v1/: __init__.py  artifacts.py  blobs.py
glareclient/tests/: utils.py
glareclient/tests/unit/: base.py  fakes.py  test_client.py  test_common_http.py  test_http.py  test_progressbar.py  test_shell.py  test_ssl.py  test_utils.py
glareclient/tests/unit/osc/: test_plugin.py
glareclient/tests/unit/osc/v1/: fakes.py  fakes_schemas.py  test_artifacts.py  test_blob.py
glareclient/tests/unit/v1/: fixtures.py  test_artifacts.py
glareclient/v1/: __init__.py  artifacts.py  client.py
releasenotes/source/: conf.py  index.rst
tools/: glance.bash_completion  tox_install.sh
